# media-manager

./: .env.example  .gitignore  README.md  main.py  media-manager.service  pyproject.toml
src/: __init__.py  artwork.py  config.py  lyrics.py  metadata.py  naming.py  smb_client.py  watcher.py
